Add gateway user subscription update endpoint
